# redes2-practica2

./: .gitignore  .travis.yml  AUTHORS  CLEAN.sh  G-2301-05-P2-autogen.sh  G-2301-05-P2-server  G-2301-05-makefile.am  MOTD.txt  README.md  configure.ac  makefile  nohup.out  redes2.sublime-project  redes2.sublime-workspace  scon
cert/: client.conf  client.csr  client.key  client.pem  root.conf  root.key  root.pem  root.srl  rootcert.pem  server.conf  server.csr  server.key  server.pem  server_both.pem
cliente_SSL/: G-2301-05-P3-chat  G-2301-05-makefile  revision.txt
cliente_SSL/cert/: ana.csr  ana.key  history.txt  manu.csr  manu.key  manu.pem  root.pem
cliente_SSL/doc/: client_connect.3.txt  client_disconnect.3.txt  client_new.3.txt  client_set_name.3.txt  client_set_nick.3.txt  client_set_port.3.txt  client_set_prefix.3.txt  client_set_real_name.3.txt  client_set_server.3.txt  clientcmd.3.txt  clientrpl.3.txt
cliente_SSL/includes/: G-2301-05-P3-chat.h  G-2301-05-P3-client.h  G-2301-05-P3-clientcmd.h  G-2301-05-P3-clientfile.h  G-2301-05-P3-clientrpl.h  G-2301-05-P3-ssl_functions.h  G-2301-05-P3-util.h
cliente_SSL/scripts/: gendoc.pl  redes2.sublime-project
cliente_SSL/src/: G-2301-05-P3-chat.c  G-2301-05-P3-chat_funcs.c  G-2301-05-P3-util.c
doc/: G-2301-05-P2-doc.md  G-2301-05-P3-doc.md  aceptar_canal_seguro_SSL.3.txt  cerrar_canal_SSL.3.txt  conectar_canal_seguro_SSL.3.txt  diseño.md  evaluar_post_connectar_SSL.3.txt  fijar_contexto_SSL.3.txt  recibir_datos_SSL.3.txt  ssock_close.3.txt  ssock_get_fd.3.txt  ssock_new.3.txt  ssock_recv.3.txt  ssock_secure_new.3.txt  sssock_get_type.3.txt
echo/: G-2301-05-P3-gen_certs.sh  echo_server.c  root.pem  rootkey.pem
include/: G-2301-05-P1-util.h  G-2301-05-P2-chanel.h  G-2301-05-P2-channel.h  G-2301-05-P2-config.h.in  G-2301-05-P2-server.h  G-2301-05-P2-server.h.orig  G-2301-05-P2-switches.h  G-2301-05-P2-user.h  G-2301-05-P2-user.h.orig  G-2301-05-P2-util.h  G-2301-05-P3-channel.h  G-2301-05-P3-config.h  G-2301-05-P3-config.h.in  G-2301-05-P3-server.h  G-2301-05-P3-ssl_functions.h  G-2301-05-P3-ssock.h  G-2301-05-P3-user.h
man/: aceptar_canal_seguro_SSL.3  cerrar_canal_SSL.3  conectar_canal_seguro_SSL.3  enviar_datos_SSL.3  evaluar_post_connectar_SSL.3  fijar_contexto_SSL.3  inicializar_nivel_SSL.3  recibir_datos_SSL.3  ssock_close.3  ssock_get_fd.3  ssock_get_type.3  ssock_new.3  ssock_recv.3  ssock_secure_new.3  ssock_send.3
scripts/: redes2.sublime-project  scon
src/: G-2301-05-P1-util.c  G-2301-05-P2-channel.c  G-2301-05-P2-parser.c  G-2301-05-P2-server.c  G-2301-05-P2-switches.c  G-2301-05-P2-user.c  G-2301-05-P2-util.c  G-2301-05-P3-channel.c  G-2301-05-P3-echo.c  G-2301-05-P3-main.c  G-2301-05-P3-server.c  G-2301-05-P3-ssl_functions.c  G-2301-05-P3-switches.c  G-2301-05-P3-user.c  G-2301-05-P3-util.c  G-2301-05-channel.c  G-2301-05-user.c
srclib/: G-2301-05-P2-lexer.c  G-2301-05-P2-lexer.l  G-2301-05-P2-parser.c  G-2301-05-P2-parser.h  G-2301-05-P2-parser.y  G-2301-05-P3-ssl_functions.c  G-2301-05-P3-ssock.c
(+29 files in other folders)
